Order Module is completed